# cuda-util

./: .gitignore  Cargo.toml  README.md  build.rs
cuda-macros/: Cargo.toml  README.md
cuda-macros-build/: Cargo.toml
cuda-macros-build/src/: lib.rs
cuda-macros-common/: Cargo.toml  README.md
cuda-macros-common/src/: conv.rs  cuda_number.rs  execution_config.rs  file.rs  generic.rs  gpu_type.rs  lib.rs  perms.rs  write.rs
cuda-macros-impl/: Cargo.toml
cuda-macros-impl/src/: lib.rs  output.rs
cuda-macros-test/: Cargo.toml  build.rs
cuda-macros-test/src/: main.rs  tests.rs
cuda-macros-util/: Cargo.toml
cuda-macros-util/src/: conv.rs  execution_config.rs  file.rs  lib.rs  write.rs
cuda-macros/src/: lib.rs
cuda-util-common/: Cargo.toml
cuda-util-common/src/: lib.rs
res/: logo.pdn
src/: build.rs  build_utils.rs  elem.rs  lib.rs  private.rs  rcuda.rs  tensor.rs
src/cpu/: mod.rs
src/gpu/: func.rs  mod.rs  vec.rs
src/gpu/vec/: index.rs  mod.rs  reference.rs  type_util.rs
tests/: simple.rs
