[package]
name = "cuda-util"
version = "0.1.0"
authors = ["Callum Tolley <cgtrolley@gmail.com>"]
edition = "2018"
build = "build.rs"

[features]
unstable = []
cuda_6_5  = ["cuda/cuda_6_5" , "cuda-macros/cuda_6_5" , "cuda-macros-build/cuda_6_5" ]
cuda_7_0  = ["cuda/cuda_7_0" , "cuda-macros/cuda_7_0" , "cuda-macros-build/cuda_7_0" ]
cuda_7_5  = ["cuda/cuda_7_5" , "cuda-macros/cuda_7_5" , "cuda-macros-build/cuda_7_5" ]
cuda_8_0  = ["cuda/cuda_8_0" , "cuda-macros/cuda_8_0" , "cuda-macros-build/cuda_8_0" ]
cuda_9_0  = ["cuda/cuda_9_0" , "cuda-macros/cuda_9_0" , "cuda-macros-build/cuda_9_0" ]
cuda_9_1  = ["cuda/cuda_9_1" , "cuda-macros/cuda_9_1" , "cuda-macros-build/cuda_9_1" ]
cuda_9_2  = ["cuda/cuda_9_2" , "cuda-macros/cuda_9_2" , "cuda-macros-build/cuda_9_2" ]
cuda_10_0 = ["cuda/cuda_10_0", "cuda-macros/cuda_10_0", "cuda-macros-build/cuda_10_0"]
cuda_10_1 = ["cuda/cuda_10_1", "cuda-macros/cuda_10_1", "cuda-macros-build/cuda_10_1"]

[build-dependencies]
cuda-macros-build = { path = "./cuda-macros-build" }
rustc_version = "0.2.3"

[dependencies]
cuda-macros = { path = "./cuda-macros" }
cuda = "0.4.0-pre.2"
cfg-if = "0.1.9"
num = "0.2.0"
ndarray = "0.12.1"
libc = "0.2"
lazy_static = "1.3.0"