[package]
name = "cuda-macros-common"
version = "0.1.0"
authors = ["Callum Tolley <cgtrolley@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
features = ["cuda_10_1"]
default-target = "x86_64-unknown-linux-gnu"

[features]
cuda_6_5  = ["cuda/cuda_6_5" ]
cuda_7_0  = ["cuda/cuda_7_0" ]
cuda_7_5  = ["cuda/cuda_7_5" ]
cuda_8_0  = ["cuda/cuda_8_0" ]
cuda_9_0  = ["cuda/cuda_9_0" ]
cuda_9_1  = ["cuda/cuda_9_1" ]
cuda_9_2  = ["cuda/cuda_9_2" ]
cuda_10_0 = ["cuda/cuda_10_0"]
cuda_10_1 = ["cuda/cuda_10_1"]

[dependencies]
cuda = "0.4.0-pre.2"
proc-macro2 = "0.4.30"
syn = { version = "0.15.39", features = ["full", "extra-traits"] }
quote = "0.6.13"
chrono = "0.4.7"
num = "0.2"
