[package]
name = "cuda-macros-impl"
version = "0.1.0"
authors = ["Callum Tolley <cgtrolley@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[package.metadata.docs.rs]
features = ["cuda_10_1"]
default-target = "x86_64-unknown-linux-gnu"

[features]
cuda_6_5  = ["cuda/cuda_6_5" , "cuda-macros-util/cuda_6_5" ]
cuda_7_0  = ["cuda/cuda_7_0" , "cuda-macros-util/cuda_7_0" ]
cuda_7_5  = ["cuda/cuda_7_5" , "cuda-macros-util/cuda_7_5" ]
cuda_8_0  = ["cuda/cuda_8_0" , "cuda-macros-util/cuda_8_0" ]
cuda_9_0  = ["cuda/cuda_9_0" , "cuda-macros-util/cuda_9_0" ]
cuda_9_1  = ["cuda/cuda_9_1" , "cuda-macros-util/cuda_9_1" ]
cuda_9_2  = ["cuda/cuda_9_2" , "cuda-macros-util/cuda_9_2" ]
cuda_10_0 = ["cuda/cuda_10_0", "cuda-macros-util/cuda_10_0"]
cuda_10_1 = ["cuda/cuda_10_1", "cuda-macros-util/cuda_10_1"]

[dependencies]
cuda-macros-util = { path = "../cuda-macros-util" }
cuda = "0.4.0-pre.2"
proc-macro2 = "0.4.30"
syn = { version = "0.15.39", features = ["full", "extra-traits"] }
quote = "0.6.13"
fs2 = "0.4.3"
lazy_static = "1.3.0"
