[package]
name = "cuda-macros-impl"
version = "0.1.0"
authors = ["Callum Tolley <cgtrolley@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[package.metadata.docs.rs]
features = ["cuda_10_1"]
default-target = "x86_64-unknown-linux-gnu"

[features]
cuda_6_5  = ["cuda/cuda_6_5" , "util/cuda_6_5" ]
cuda_7_0  = ["cuda/cuda_7_0" , "util/cuda_7_0" ]
cuda_7_5  = ["cuda/cuda_7_5" , "util/cuda_7_5" ]
cuda_8_0  = ["cuda/cuda_8_0" , "util/cuda_8_0" ]
cuda_9_0  = ["cuda/cuda_9_0" , "util/cuda_9_0" ]
cuda_9_1  = ["cuda/cuda_9_1" , "util/cuda_9_1" ]
cuda_9_2  = ["cuda/cuda_9_2" , "util/cuda_9_2" ]
cuda_10_0 = ["cuda/cuda_10_0", "util/cuda_10_0"]
cuda_10_1 = ["cuda/cuda_10_1", "util/cuda_10_1"]

[dependencies]
util = { package = "cuda-macros-common", path = "../cuda-macros-common" }
cuda = "0.4.0-pre.2"

proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"

fs2 = "0.4.3"
lazy_static = "1.3.0"
