[package]
name = "cuda-macros"
version = "0.1.0"
authors = ["Callum Tolley <cgtrolley@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
features = ["cuda_10_1"]
default-target = "x86_64-unknown-linux-gnu"

[features]
cuda_6_5  = ["cuda-macros-impl/cuda_6_5" , "cuda-macros-common/cuda_6_5" ]
cuda_7_0  = ["cuda-macros-impl/cuda_7_0" , "cuda-macros-common/cuda_7_0" ]
cuda_7_5  = ["cuda-macros-impl/cuda_7_5" , "cuda-macros-common/cuda_7_5" ]
cuda_8_0  = ["cuda-macros-impl/cuda_8_0" , "cuda-macros-common/cuda_8_0" ]
cuda_9_0  = ["cuda-macros-impl/cuda_9_0" , "cuda-macros-common/cuda_9_0" ]
cuda_9_1  = ["cuda-macros-impl/cuda_9_1" , "cuda-macros-common/cuda_9_1" ]
cuda_9_2  = ["cuda-macros-impl/cuda_9_2" , "cuda-macros-common/cuda_9_2" ]
cuda_10_0 = ["cuda-macros-impl/cuda_10_0", "cuda-macros-common/cuda_10_0"]
cuda_10_1 = ["cuda-macros-impl/cuda_10_1", "cuda-macros-common/cuda_10_1"]

[dependencies]
cuda-macros-impl = { path = "../cuda-macros-impl" }
cuda-macros-common = { path = "../cuda-macros-common" }
